--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "ai-image-cropper"
 version = "1.0.0"
 description = "Intelligent image cropping tool with multiple detection methods"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 authors = [
     {name = "Gary A. Stafford"}
 ]
@@ -12,7 +12,7 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Multimedia :: Graphics",
     "Topic :: Scientific/Engineering :: Image Recognition",
 ]
@@ -24,13 +24,15 @@ dependencies = [
     "pillow>=11.0.0",
     "timm>=1.0.0",
     "transformers>=4.30.0",
-    "torch>=2.0.0",
     "ultralytics>=8.3.0",
     "fastapi>=0.121.1",
     "uvicorn>=0.38.0",
     "python-multipart>=0.0.20",
     "rfdetr>=1.3.0",
 ]
+# Note: torch is installed separately to allow GPU or CPU choice
+# GPU: uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
+# CPU: uv pip install torch torchvision
 
 [project.urls]
 Homepage = "https://github.com/garystafford/image-cropper"
@@ -45,6 +47,7 @@ dev = [
     "black>=23.0.0",
     "ruff>=0.1.0",
     "hatchling>=1.0.0",
+    "autoflake>=2.0.0",
 ]
 
 [project.scripts]
