--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -40,6 +40,33 @@ server {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 
+    # Increase client body size for image uploads
+    client_max_body_size 100M;
+
+    # Proxy API requests to backend container
+    location /api/ {
+        proxy_pass http://127.0.0.1:8000;
+        proxy_set_header Host \$host;
+        proxy_set_header X-Real-IP \$remote_addr;
+        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto \$scheme;
+
+        # Increase timeouts for long-running AI operations
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
+        proxy_send_timeout 300s;
+    }
+
+    # Proxy backend static files (uploads, outputs, cropped images)
+    location ~ ^/(uploads|outputs|cropped_images)/ {
+        proxy_pass http://127.0.0.1:8000;
+        proxy_set_header Host \$host;
+        proxy_set_header X-Real-IP \$remote_addr;
+        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto \$scheme;
+    }
+
+    # Frontend static files
     location / {
         try_files \$uri \$uri/ /index.html;
     }
